--- a/index.html
+++ b/index.html
@@ -854,7 +854,7 @@
 
 <div class="hero-image">
 
-                <img src="photo.jpg" alt="個人照片">
+                <img src="1751781441801.jpg" alt="個人照片">
 
         </div>
 
