--- a/index.html
+++ b/index.html
@@ -854,7 +854,7 @@
 
 <div class="hero-image">
 
-                <img src="1751781441801.jpg" alt="個人照片" style="max-width: 100%; height: auto; display: block; margin: 0 auto;">
+                <img src="1751781441801.jpg" alt="個人照片" style="width: 50%; max-width: 600px; height: auto; display: block; margin: 0 auto;">
 
         </div>
 
