--- a/index.html
+++ b/index.html
@@ -1054,7 +1054,7 @@
 
     <footer class="footer">
 
-        <p>&copy; 2025 個人介紹</p>
+        <p>&copy; 2025 Power by Teddy </p>
 
     </footer>
 
